# docpod

./: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_users_workspaces.py  0002_templates.py  0003_user_profile_fields.py  0004_generation_pipeline.py  0005_document_level_context_inputs.py  0006_contact_submissions.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  (+5 more)
backend/app/core/: celery_app.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  contact_submission.py  document.py  document_artifact.py  generation_event.py  generation_job.py  membership.py  template.py  template_context_input.py  template_section.py  user.py  workspace.py
backend/app/prompts/: registry.yaml
backend/app/repositories/: contact_submission_repo.py  document_repo.py  generation_repo.py  membership_repo.py  template_repo.py  user_repo.py  workspace_repo.py
backend/app/schemas/: auth.py  contact.py  document.py  generation.py  template.py  user.py  workspace.py
backend/app/services/: auth_service.py  crawl_service.py  document_export_service.py  document_parse_service.py  generation_service.py  llm_service.py  prompt_template_service.py  retrieval_service.py  storage_service.py  template_service.py  workspace_service.py
backend/app/tasks/: __init__.py  generation_tasks.py
(+98 files in other folders)
